release: ship core v5.0.28